--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center"
         >
           <a class="mr-5 hover:text-gray-900" href="#">Home</a>
-          <a class="mr-5 hover:text-gray-900" href="#">Course</a>
+          <a class="mr-5 hover:text-gray-900" href="https://www.youtube.com/channel/UChLTkjhp7il8el5B8kyJAeA" target="_blank">Course</a>
           <a class="mr-5 hover:text-gray-900" href="#">blog</a>
           <a class="mr-5 hover:text-gray-900" href="#">Contact Us</a>
         </nav>
@@ -72,7 +72,7 @@
         >
           © 2022 Copyright —
           <a
-            href="https://twitter.com/knyttneve"
+            href="https://twitter.com/learncloud32"
             class="text-gray-600 ml-1"
             rel="noopener noreferrer"
             target="_blank"
